--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header id="showcase">
-		<h1>Welcome to the Beach</h1>
+		<h1>Welcome to the Beach!</h1>
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 		<a href="#section" class="button">Read More</a>
 	</header>
